# api-test

./: pyproject.toml
app/: main.py  utils.py  worker.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: car.py  company.py
app/db/: __init__.py  session.py
app/lib/: exceptions.py  helpers.py  logging.py
app/lib/core/: config.py
app/lib/crud/: __init__.py  base.py  car.py  company.py  pet.py
app/lib/endpoints/: base.py
app/lib/models/: __init__.py  car.py  company.py  pet.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
app/tests/crud/: test_item.py  test_user.py
app/tests/utils/: item.py  user.py  utils.py
management-api/: .env  .gitlab-ci.yml
scripts/: start-dev-server.sh  upgrade-packages.sh
