[tool.mypy]
plugins = ["pydantic.mypy", "sqlmypy"]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Erik Williamson <erik@techsanity.ca>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "*"
fastapi = "*"
python-multipart = "*"
email-validator = "*"
requests = "*"
celery = "*"
passlib = {extras = ["bcrypt"], version = "*"}
tenacity = "*"
pydantic = {extras = ["dotenv"], version = "*"}
emails = "*"
raven = "*"
gunicorn = "*"
jinja2 = "*"
pytest = "*"
python-jose = {extras = ["cryptography"], version = "*"}
beanie = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
isort = "*"
autoflake = "*"
flake8 = "*"
pytest = "*"
sqlalchemy-stubs = "*"
pytest-cov = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
import_heading_stdlib = "Standard Library Imports"
import_heading_thirdparty = "3rd-Party Imports"
import_heading_firstparty = "Application-Local Imports"
import_heading_future = "Future Imports"
import_heading_localfolder = "Local Folder Imports"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

